--- a/guide.bib
+++ b/guide.bib
@@ -157,11 +157,10 @@
   year =          {2009},
 }
 
-@misc{GNUgpl,
-  howpublished =  {Free Software Foundation, Inc.},
-  key =           {gnugpl},
-  note =          {\url{http://www.gnu.org/copyleft/gpl.html}},
-  title =         {{GNU} General Public License},
+@misc{MITlicense,
+  howpublished =  {Massachusetts Institute of Technology},
+  note =          {\url{http://www.opensource.org/licenses/MIT}},
+  title =         {{MIT} License},
 }
 
 @misc{lparseManual,
