--- a/introduction.tex
+++ b/introduction.tex
@@ -25,7 +25,7 @@ accepting propositional CNF formulas in (extended) DIMACS format as well as PB f
 \subsection{Download and Installation}\label{sec:install}
 
 The Potassco tools \gringo, \clasp, and \clingo\
-are written in \texttt{C++} and published under the GNU General Public License~\cite{GNUgpl}.
+are written in \texttt{C++} and published under the MIT License~\cite{MITlicense}.
 Source packages as well as precompiled binaries for Linux, MacOS, and Windows
 are available at~\cite{potassco}.
 For building the tools from sources,
