updated asprin description to version 3.1

--- a/guide.bib
+++ b/guide.bib
@@ -909,6 +909,15 @@
   year =          {2012},
 }
 
+@article{bobrdohopo04a,
+  author =       {C. Boutilier and R.I. Brafman and C. Domshlak and H. H. Hoos and D. Poole},
+  journal =      {Journal of Artificial Intelligence Research},
+  pages =        {135-191},
+  title =        {{CP}-nets: A Tool for Representing and Reasoning with Conditional Ceteris Paribus Preference Statements},
+  volume =       {21},
+  year =         {2004},
+}
+
 @misc{aspcore2,
   author =        {F. Calimeri and W. Faber and M. Gebser and G. Ianni and
                    R. Kaminski and T. Krennwallner and N. Leone and
@@ -1262,4 +1271,3 @@
   volume =        {10370},
   year =          {2017},
 }
-
