--- a/theory.tex
+++ b/theory.tex
@@ -14,22 +14,317 @@ Information on theory solving with \clingo\ can be obtained at the following ref
 \subsection{ASP and Difference Constraints}
 \label{sec:difference:constraints}
 
-\begin{itemize}
-\item The system \clingoM{DL} provides a seemless way to integrate a susbset of the theory of linear constraints, namely Quantifier-Free Integer Difference Logic (QF-IDL), into ASP
-\item It deals with constraints of the form $x-y\leq k$, where $x$ and $y$ are integer variables and $k$ is an integer constant
-\item Despite its restriction, QF-IDL can be used to naturally encode timing related problems, e.g., scheduling or timetabling, and provides the additional advantage of being solvable in polynomial time
-\item Syntactically, a difference constraint $x-y\leq k$ is represented by a difference constraint atom of the form 
+The system \clingoM{DL} provides a seamless way to integrate a subset of the theory of linear constraints, namely Quantifier-Free Integer Difference Logic (QF-IDL), into ASP.
+It deals with constraints of the form $x-y\leq k$, where $x$ and $y$ are integer variables and $k$ is an integer constant.
+Despite its restriction, QF-IDL can be used to naturally encode timing related problems, e.g., scheduling or timetabling, and provides the additional advantage of being solvable in polynomial time.
+Syntactically, a difference constraint $x-y\leq k$ is represented by a difference constraint atom of the form.
  $$
-    \mathtt{\&diff\text{ }\{x-y\}\text{ }<=\text{ }k}
+    \code{\&diff\text{ }\{$x$-$y$\}\text{ }<=\text{ }$k$}
  $$
-\item Here, \texttt{x} and \texttt{y} may be terms as described in Section~\ref{subsec:lang:gringo}, but are internally interpreted as integer variable names,
-      and $k$ is an integer 
-\item Difference constraint atoms may occur in bodies as well as in heads of rules.
-\item For a more formal introduction of \clingoM{DL}, please see \cite{jakaosscscwa17a}
-\item The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{http://github.org/potassco/clingoDL}
-\end{itemize}
+Here, $x$ and $y$ may be terms as described in Section~\ref{subsec:lang:gringo}, but are internally interpreted as integer variable names,
+and $k$ is an integer.
+Difference constraint atoms may occur in bodies as well as in heads of rules.
+For a more formal introduction of \clingoM{DL}, please see \cite{jakaosscscwa17a}.
+The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{http://github.org/potassco/clingoDL}.
+
 
 \subsubsection{Modeling and solving with \clingoM{DL}}
+
+The most common usage of \clingoM{DL} in its default configuration are rules of the form:
+  \begin{align*}
+    \code{\&diff\text{ }\{$x$-$y$\}\text{ }<=\text{ }$k$ :- $L_1$,$\dots$,$L_n$.}
+  \end{align*}
+Here, $L_i$ for $1\leq i \leq n$ are literals as described in \ref{subsec:gringo:normal}.
+Intuitively, it means that whenever the body of such a rule holds, 
+the linear equation represented by the head has to be satisfied as well.
+Conversely, if the body does not hold, no constraints are posed to the QF-IDL theory.
+\begin{example}\label{ex:dl:simple}
+         See the following simple example:
+         \lstinputlisting{examples/dl.lp}
+The program contains one propositional variable \code{a} and two integer variables called \code{x} and \code{y}.
+The truth value of \code{a} can be freely chosen (Line~1),
+and whenever \code{a} holds, the linear equation $\code{x}-\code{y}\leq -3$ must also hold.
+
+Calling the system with the example produces following output:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \textbackslash\\ 
+        \mbox{~~~}\attach{examples/dl.lp}{dl.lp}   0}\\
+}
+\begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from dl.lp
+Solving...
+Answer: 1
+
+Answer: 2
+dl(x,"0") dl(y,"3") a
+SATISFIABLE
+
+Models       : 2
+Calls        : 1
+...
+\end{lstlisting}
+There are two answer sets, one is the empty answer set and one contains \code{a} and the symbols \code{dl(x,"0")} and \code{dl(y,"3")}.
+A symbol \code{dl($x$,"$v$")} denotes that variable $x$ is assigned value $v$.
+This means that in the second answer set a valid assignment for \code{x} and \code{y} was found,
+0 and 3, respectively, such that $\code{x}-\code{y}\leq -3$ is satisfied.
+There are two things of note in the results
+First, no assignment is given for \code{x} and \code{y} in the first answer set since there are no difference constraints to satisfy,
+hence values may be arbitrary.
+Second, only one valid assignment for \code{x} and \code{y} is shown in the second answer set 
+while in principle there are infinitely many valid assignments for $\code{x}-\code{y}\leq -3$.
+The assignment that is given by \clingoM{DL} is a so-called \emph{As-Soon-As-Possible (ASAP) assignment}.
+Such assignments have the minimal sum of absolute values assigned to the variables,
+or, in other words, values are as close to 0 as possible while still fulfilling all difference constraints.
+As we will see in the following example, this is a useful trait in some scheduling problems,
+where the ASAP assignment represents the earliest time point at which tasks may start while adhering to all timing constraints.
+
+ \end{example}
+
+
+\begin{example}\label{ex:dl:fs}
+
+% --------------------------------------------------------------------------------
+\begin{figure}[ht]
+\centering
+{\def\svgscale{.4}
+\input{figures/dl}}
+\caption{Flow shop: instance with three tasks and two machines\label{fig:fs:ins}}
+\end{figure}
+\begin{figure}[ht]
+\centering
+{\def\svgwidth{\linewidth}
+\input{figures/dl-sol}}
+\caption{Flow shop: solutions for all possible permutations with the total execution length in the top right corner and optimal solutions with a blue background\label{fig:fs:sol}}
+\end{figure}
+% --------------------------------------------------------------------------------
+%
+To see a more involved example, we consider the flow shop problem,
+dealing with a set of tasks $T$ that have to be consecutively executed on $m$ machines.
+%
+Each task has to be processed on each machine from $1$ to $m$. 
+Different parts of one task are completed on each machine resulting in the completion of the task after execution on all machines is finished.
+Before a task can be processed on machine $i$, it has to be finished on machine $i-1$.
+The duration of different tasks on the same machine may vary.
+A task can only be executed on one machine at a time and
+a machine must not be occupied by more than one task at a time.
+%
+An (optimal) solution to the problem is a permutation of tasks so that all tasks are finished as early as possible.
+
+Figure~\ref{fig:fs:ins} depicts a possible instance for the flow shop problem.
+The three tasks \code{a}, \code{b}, and \code{c} have to be scheduled on two machines.
+The colored boxes indicate how long a task has to run on a machine.
+Lighter shades of the same color are for the first and darker ones for the second machine.
+For example, task \code{a} needs to be processed for~$3$ time units on the first and~$4$ time units on the second machine.
+
+% --------------------------------------------------------------------------------
+\lstinputlisting[float=ht,mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:ins}]{examples/fsI.lp}
+% --------------------------------------------------------------------------------
+\lstinputlisting[float=ht,literate={\%\%}{}{0},mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:enc}]{examples/fsE.lp}
+% --------------------------------------------------------------------------------
+%
+Next we encode this problem using difference constraints.
+We give in Listing~\ref{prg:fs:ins} a straightforward encoding of the instance in Figure~\ref{fig:fs:ins}.
+Listing~\ref{prg:fs:enc} depicts the encoding of the flow shop problem.
+Following the generate, define, and test methodology of ASP,
+we first generate in lines~\ref{prg:fs:perm:begin}--\ref{prg:fs:perm:end} all possible permutations of tasks,
+where atoms of form \code{perm(T,U)} encode that task~$T$ has to be executed before task~$U$.
+Then, in the following lines~\ref{prg:fs:diff:begin}--\ref{prg:fs:diff:end},
+we use difference constraints to calculate the duration of the generated permutation.
+%
+The difference constraint in Line~\ref{prg:fs:permutation:seq} guarantees that the tasks are executed in the right order.
+For example, $\code{(a,1)} - \code{(a,2)} \leq -d$ ensures that task~\code{a} can only be executed on machine~\code{2} if it has finished on machine~\code{1}.
+Hence, variable \code{(a,2)} has to be assigned so that it is greater or equal to $\code{(a,2)}-d$ where $d$ is the duration of task \code{a} on machine \code{1}.
+Similarly, $\code{(a,1)} - \code{(b,1)} \leq -d$ makes sure that task~\code{b} can only be executed on machine~\code{1} if task~\code{a} has finished on machine~\code{1}.
+While the first constraint is a fact (see Line~\ref{prg:fs:permutation:seq:machine}),
+the latter is subject to the generated permutation of tasks (see Line~\ref{prg:fs:permutation:seq:task}).
+%
+The difference constraint in Line~\ref{prg:fs:null} ensures that all time points at which a task is started are greater than zero.
+Note that this constraint is in principle redundant
+but since sets of difference constraints may have infinitely many solutions
+it is good practice to encode relative to a starting point.
+Furthermore, note that~\code{0} is actually a variable.
+This is a dedicated variable that is always assigned the value 0 and can be used to encode difference constraints with only one variable.
+
+Running encoding and instance with \clingoM{DL} results in the following $6$ solutions
+corresponding to the solutions in Figure~\ref{fig:fs:sol}.%
+\footnote{Note that in each solution all tasks are executed as early as possible.
+  This is due to the guaranteed ASAP assignment as mentioned above.}
+One for each possible permutation of tasks:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \attach{examples/fsE.lp}{fsE.lp} \textbackslash\\  
+        \mbox{~~~}\attach{examples/fsI.lp}{fsI.lp.} 0}\\
+}
+ \begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from fsE.lp ...
+Solving...
+Answer: 1
+dl((a,1),"1")  dl((a,2),"7") dl((b,1),"0") dl((b,2),"1") 
+  dl((c,1),"4") dl((c,2),"11") perm(b,a) perm(a,c)
+Answer: 2
+dl((a,1),"6") dl((a,2),"16") dl((b,1),"5") dl((b,2),"10") 
+  dl((c,1),"0") dl((c,2),"5") perm(b,a) perm(c,b)
+Answer: 3
+dl((a,1),"0") dl((a,2),"3") dl((b,1),"8") dl((b,2),"13") 
+  dl((c,1),"3") dl((c,2),"8") perm(c,b) perm(a,c)
+Answer: 4
+dl((a,1),"6") dl((a,2),"12") dl((b,1),"0") dl((b,2),"1") 
+  dl((c,1),"1") dl((c,2),"7") perm(b,c) perm(c,a)
+Answer: 5
+dl((a,1),"0") dl((a,2),"3") dl((b,1),"3") dl((b,2),"7") 
+  dl((c,1),"4") dl((c,2),"13") perm(b,c) perm(a,b)
+Answer: 6
+dl((a,1),"5") dl((a,2),"10") dl((b,1),"8") dl((b,2),"14") 
+  dl((c,1),"0") dl((c,2),"5") perm(c,a) perm(a,b)
+SATISFIABLE
+
+Models       : 6
+Calls        : 1
+...
+\end{lstlisting}
+\end{example}
+
+\subsubsection{Advanced options of \clingoM{DL}}
+
+In the following, we will consider the two main parameter that may change \clingoM{DL}'s behavior:
+\begin{align*}
+ \code{--strict}& \text{ : enables strict semantics}\\
+ \code{--rdl}& \text{ : variables and constants of the difference constraints have real values} 
+\end{align*}
+
+First, let us consider the \emph{strict semantics} option.
+In the default configuration, this option is omitted and \clingoM{DL} works with a \emph{non-strict semantics}.
+This option changes the logical connection of the truth value of the difference constraint atom and the difference constraint it represents.
+The connections are as follows:
+\begin{align*}
+ \text{non-strict :}&\code{\&diff\text{ }\{$x$-$y$\}\text{ }<=\text{ }$k$} \rightarrow x-y\leq k\\
+ \text{strict :}&\code{\&diff\text{ }\{$x$-$y$\}\text{ }<=\text{ }$k$} \leftrightarrow x-y\leq k
+\end{align*}
+
+Here, the arrows represent logical implication and equivalence, respectively.
+Intuitively, as mentioned above, in the non-strict case, 
+if a difference constraint atom holds, the difference constraint has to hold as well,
+while no constraint has to be considered by the QF-IDL theory if the respective difference constraint atom is false.
+In contrast, strict semantics enforces the negation of the difference constraint to be satisfied if the difference constraint atom is false.
+For instance, using the strict semantics, if the difference constraint atom $\code{\&diff\text{ }\{x-y\}\text{ }<=\text{ }-3}$ is false,
+the difference constraint $y-x\leq 2$ has to hold, which is the negation of $\code{x}-\code{y} \leq -3$.
+
+\begin{example}\label{ex:dl:strict}
+We revisit Example~\ref{ex:dl:simple} with strict semantics:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \textbackslash\\ 
+        \mbox{~~~}\attach{examples/dl.lp}{dl.lp} 0 \textbackslash\\
+        \mbox{~~~}--strict}
+}
+\begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from dl.lp
+Solving...
+Answer: 1
+dl(x,"0") dl(y,"0")
+Answer: 2
+dl(x,"0") dl(y,"3") a
+SATISFIABLE
+
+Models       : 2
+Calls        : 1
+...
+\end{lstlisting}
+As we can see, the answer set without \code{a} shows an assignment for \code{x} and \code{y},
+0 for both of them, since the difference constraint $\code{x}-\code{y}\leq2$ has to be satisfied.
+
+Now, we extend the example slightly by adding the fact that difference constraint $\code{x}-\code{y}\leq -4$ has to be satisfied:
+\lstinputlisting{examples/dlS.lp}
+Running this example with strict semantics results in the following output:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \textbackslash\\ 
+        \mbox{~~~}\attach{examples/dlS.lp}{dlS.lp} 0 \textbackslash\\
+        \mbox{~~~}--strict}
+}
+\begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from dlS.lp
+Solving...
+Answer: 1
+dl(x,"0") dl(y,"4") a
+SATISFIABLE
+
+Models       : 1
+Calls        : 1
+...
+\end{lstlisting}
+
+Only the answer set with \code{a} remains and the assignment of \code{y} changed to 4 
+since both $\code{x}-\code{y}\leq -3$ and $\code{x}-\code{y}\leq -4$ have to be fulfilled.
+If \code{a} is false, difference constraints $\code{x}-\code{y}\leq -4$ and $\code{y}-\code{x}\leq 2$ would have to be satisfied,
+the first due to the fact in Line~2 and the second due to strict semantics and $\code{\&diff\text{ }\{x-y\}\text{ }<=\text{ }-3}$ being false.
+Since there does not exist a valid assignment fulfilling those two constraints, it cannot belong to an answer set.
+
+\end{example}
+
+Let us now consider the usefulness of strict and non-strict semantics in different scenarios.
+As a rule of thump, using difference constraint atoms in the head of rules fits the non-strict semantics 
+while usage in the body the strict one.
+
+\begin{example}\label{ex:dl:se}
+See following example:
+\lstinputlisting{examples/dlSE.lp}
+Running this example with strict semantics results in the following output:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \textbackslash\\ 
+        \mbox{~~~}\attach{examples/dlSE.lp}{dlSE.lp} 0 \textbackslash\\
+        \mbox{~~~}--strict}
+}
+
+\begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from examples/dlSE.lp
+Solving...
+Answer: 1
+dl(x,"0") dl(y,"4") a
+SATISFIABLE
+
+Models       : 1
+Calls        : 1
+...
+\end{lstlisting}
+
+This constitutes the expected result 
+where the only possible answer set contains \code{a} since $\code{x}-\code{y}\leq-4$
+has to be satisfied which implies that $\code{x}-\code{y}\leq-3$ is also satisfied,
+which in turn derives \code{a}.
+
+However, switching to non-strict semantics produces the following result:
+\marginlabel{%
+  To inspect the output, invoke:\\
+  \code{\mbox{~}clingo-dl \textbackslash\\ 
+        \mbox{~~~}\attach{examples/dlSE.lp}{dlSE.lp} 0}
+}
+
+\begin{lstlisting}[numbers=none]
+clingo-dl version 1.0.0
+Reading from examples/dlSE.lp
+Solving...
+Answer: 1
+dl(x,"0") dl(y,"4")
+Answer: 2
+dl(x,"0") dl(y,"4") a
+SATISFIABLE
+
+Models       : 2
+Calls        : 1
+...
+\end{lstlisting}
+
+\end{example}
+
+
 
 \subsection{ASP and Linear Constraints}
 \label{sec:linear:constraints}
